--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "babel-register": "^6.26.0",
     "chai": "^4.1.1",
     "cross-env": "^5.0.5",
-    "mocha": "^3.5.0"
+    "mocha": "^3.5.0",
+    "nightwatch": "^0.9.16",
+    "selenium-standalone": "^6.8.0"
   },
   "dependencies": {
     "express": "^4.15.4",
